deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: symfony-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: symfony-app
  template:
    metadata:
      labels:
        app: symfony-app
    spec:
      containers:
        - name: symfony
          image: ghcr.io/${GITHUB_REPOSITORY}/symfony-app:latest # Cette variable sera substituée par Github
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
