service.yaml
apiVersion: v1
kind: Service
metadata:
  name: symfony-service
spec:
  selector:
    app: symfony-app
  ports:
    - port: 80
      targetPort: 8000
  type: NodePort
